=================
Changes for Crate
=================

Unreleased
==========

 - Updated crash version to 0.11.2 which contains following changes:

    - added ``--format`` command line option
      to support different response output formats such as
      ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

    - BREAKING CHANGE
      the ``CONNECT <host>`` client command was changed to ``\connect <host>``
      see documentation for further details

    - alternative cli implementation using prompt_toolkit

    - added coloured printing when in interactive shell

 - Optimize OR queries which involve the cluster column.

 - Added support for the ``IF EXISTS`` clause to ``DROP TABLE`` and
   ``DROP BLOB TABLE``

2015/02/17 0.47.3
=================

 - Fix: Inserting from a query which contains aggregation functions failed in some
   cases

2015/02/13 0.47.2
=================

 - Fix regression introduced in ``0.47.0``: It is now again possible to refer
   to columns using the fully qualified name including table name or alias in
   the WHERE clause of an Update statement.

 - Added a new option ``overwrite_duplicates`` to COPY FROM. This option can be
   used to make COPY FROM behave the same as it did in versions prior to
   ``0.47.0``

 - Fix: Sorting on a function that returns a boolean value could cause an error.

2015/02/10 0.47.1
=================

 - Improved performance of queries that use generic scalar functions (like
   equals comparison on arrays)

 - COPY FROM now skips rows with the same primary key instead of overriding them

2015/02/06 0.47.0
=================

 - Added support for array comparisons using the equals ``=`` operator.

 - Support `INSERT ... ON DUPLICATE KEY UPDATE` statement

 - Added case-insensitive regex operator ~*

 - Support PCRE compatible regular expressions

 - updated crate-admin version to 0.11.3 which contains following changes:

    - fixed bug that showed custom schemas in the table list